# facedetector-example

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
face-detector-example/: CMakeLists.txt  face-detector-example.cpp  face-detector-example.h
tests/: CMakeLists.txt
